--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "betterScripts": {
     "dev": {
-      "command": "webpack-dev-server",
+      "command": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
       "env": {
         "NODE_ENV": "development"
       }
@@ -72,6 +72,7 @@
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.16.2",
     "webpack-node-externals": "^1.5.4",
     "webpack-validator": "^2.2.9"
   }
